<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main">

        <SearchView
                android:queryHint="Wyszukaj strukturę"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchView"
                android:layout_gravity="right" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/horizontalScrollView2"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical">


                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/rdzen_przedluzony"
                            android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/model_rdzen"
                        android:src="@drawable/model_rdzen"
                        android:scaleType = "matrix"
                        android:maxHeight="100dp"
                        android:maxWidth="50dp"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rdzen"
                        android:id="@+id/rdzen"
                        android:layout_gravity="center_horizontal|bottom" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType = "matrix"
                    android:id="@+id/model_tylomozgowie"
                    android:src="@drawable/model_tylomozgowie" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/title_activity_tylomozgowie"
                        android:id="@+id/tylomozgowie"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/model_srodmozgowie"
                    android:src="@drawable/model_srodmozgowie" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/srodmozgowie"
                        android:id="@+id/srodmozgowie"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                 <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/model_miedzymozgowie"
                    android:src="@drawable/model_miedzymozgowie"
                    android:scaleType = "matrix"
                    android:maxHeight="100dp"
                    android:maxWidth="50dp"/>

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/title_activity_miedzymozgowie"
                      android:id="@+id/miedzymozgowie"
                      android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/model_kresomozgowie"
                    android:src="@drawable/model_kresomozgowie" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/title_activity_kresomozgowie"
                        android:id="@+id/kresomozgowie"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                        <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                 <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/model_komory_mozgowe"
                    android:src="@drawable/model_komory_mozgowe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/komory"
                        android:id="@+id/komory"
                        android:layout_gravity="center_horizontal" />
                        </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>
